--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,14 @@ services:
     container_name: ark-dashboard
     restart: unless-stopped
     ports:
-      - "3001:80"  # Change this port as needed
+      - "${DASHBOARD_PORT:-4010}:80"  # Configurable port, defaults to 4010
     environment:
       # Frontend-only mode (set to false when backend is ready)
-      - VITE_FRONTEND_ONLY=true
+      - VITE_FRONTEND_ONLY=false
       # Backend API URL (when not in frontend-only mode)
-      # - VITE_API_URL=http://your-backend:3000
+      - VITE_API_URL=${BACKEND_API_URL:-http://your-ark-server:4000}
+      # Dashboard port (for internal reference)
+      - VITE_DASHBOARD_PORT=${DASHBOARD_PORT:-4010}
     volumes:
       # Optional: Mount for persistent logs
       - ./logs:/var/log/nginx
