Refactor Dockerfile and nginx configuration for improved permissions and logging
- Updated the Dockerfile to change ownership of the app directory to the nginx user for proper permissions.
- Modified the nginx configuration to disable access and error logging to prevent permission issues.

--- a/nginx.simple.conf
+++ b/nginx.simple.conf
@@ -3,6 +3,10 @@ server {
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
+    
+    # Disable logging to avoid permission issues
+    access_log off;
+    error_log off;
 
     # Basic security headers (your external proxy handles SSL)
     add_header X-Frame-Options "SAMEORIGIN" always;
