--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  ark-dashboard:
+  asa-dashboard-ui:
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -11,7 +11,8 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - VITE_FRONTEND_ONLY=true
+      - VITE_FRONTEND_ONLY=${VITE_FRONTEND_ONLY:-false}
+      - VITE_API_URL=${VITE_API_URL:-http://host.docker.internal:4000}
     ports:
       - "5173:5173"  # Vite dev server port
     command: npm run dev -- --host 0.0.0.0 
