--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 version: '3.8'
 
 services:
-  ark-dashboard:
+  asa-dashboard-ui:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: ark-dashboard
+      args:
+        VITE_API_URL: ${VITE_API_URL:-${BACKEND_API_URL:-http://localhost:4000}}
+        VITE_FRONTEND_ONLY: ${VITE_FRONTEND_ONLY:-false}
+    container_name: asa-dashboard-ui
     restart: unless-stopped
     ports:
       - "${DASHBOARD_PORT:-4010}:80"  # Configurable port, defaults to 4010
@@ -13,7 +16,7 @@ services:
       # Frontend-only mode (set to false when backend is ready)
       - VITE_FRONTEND_ONLY=${VITE_FRONTEND_ONLY:-false}
       # Backend API URL (when not in frontend-only mode)
-      - VITE_API_URL=${VITE_API_URL:-http://192.168.0.204:4000}
+      - VITE_API_URL=${VITE_API_URL:-http://localhost:4000}
       # Dashboard port (for internal reference)
       - VITE_DASHBOARD_PORT=${DASHBOARD_PORT:-4010}
     volumes:
