--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "axios": "^1.10.0",
+    "better-sqlite3": "^12.2.0",
     "monaco-editor": "^0.44.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
