--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@
 VITE_FRONTEND_ONLY=true
 
 # For real backend mode
-#VITE_FRONTEND_ONLY=false
-# VITE_API_URL=http://localhost:3000
+
+VITE_FRONTEND_ONLY=false
+VITE_API_URL=/
+VITE_SOCKET_URL=http://localhost:5173
