--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/js-yaml": "^4.0.9",
     "axios": "^1.10.0",
     "better-sqlite3": "^12.2.0",
+    "js-yaml": "^4.1.0",
     "monaco-editor": "^0.44.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
